Am dat remove la filtre ca sunt doar 3 ap. De fixuit navbar care se overlapuieste pe apartments.html si contact.html. De facut javascript pt apartments.html. Tudor 6

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,8 +2,16 @@ html {
   scroll-behavior: smooth;
 }
 
+/* * Css pentru logo */
+.logo {
+  max-width: 200px;
+  height: 200px;
+  display: block;
+}
+
 /* Css pentru navbar */
 .main-nav-container {
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -15,7 +23,7 @@ html {
 }
 
 .brand-nav {
-  top: 0;
+  top: 20px;
   left: 0;
   right: 0;
   z-index: 1000;
@@ -23,15 +31,16 @@ html {
 
 .buttons-nav {
   position: absolute;
-  padding-top: 25px;
-  top: 0;
+  top: 80px;
   left: 0;
   right: 0;
   z-index: 1001;
+  display: flex;
+  justify-content: center;
 }
 
 .nav-link {
-  background-color: rgba(255, 255, 255, 0.7); /* Fundal semitransparent */
+  background-color: rgba(255, 255, 255, 1); /* Fundal semitransparent */
   padding: 5px 15px; /* Spațiere în jurul textului */
   margin: 0 5px; /* Spațiere între elementele navbar-ului */
   color: #000; /* Culoare text */
@@ -47,7 +56,29 @@ html {
   color: #000; /* Culoare text la hover */
 }
 
+/* * Css pentru continutul de sub navbar */
+
+#below-navbar {
+  margin-top: 100px;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='black' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 /* * Css pentru imaginea mare din header */
+
+.hero-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
 .hero-section {
   height: 100vh; /* Înălțime completă a ecranului */
   background: url("../img/frames-for-your-heart-FqqiAvJejto-unsplash.jpg")
@@ -61,10 +92,17 @@ html {
   text-align: center;
   margin: 0;
   position: relative;
-  z-index: 10;
+  z-index: 40;
 }
 
-/* * Css pentru sectiunea de apartamente */
+/* Ensure content is above the overlay */
+.hero-section * {
+  position: relative;
+  z-index: 42;
+  color: inherit; /* Ensures content takes the text color of the parent */
+}
+
+/* * Css pentru sectiunea de apartamente din index */
 
 .apartment-img-container {
   aspect-ratio: 1/3;
@@ -82,11 +120,29 @@ html {
   transition: transform 0.25s ease;
 }
 
+/* * Css pentru sectiunea de apartamente din apartments */
+
+.badge {
+  background-color: rgb(83, 45, 41);
+}
+
 #apartments img:hover {
   transform: scale(1.05);
 }
 
-/* Css pentru sectiunea de review-uri */
+/* * Css pentru butoane */
+.btn {
+  background-color: rgb(83, 45, 41);
+  color: white;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.btn:hover {
+  background-color: rgb(103, 65, 61);
+  color: white;
+}
+
+/* *Css pentru sectiunea de review-uri */
 
 #reviews img {
   width: 60px;
@@ -105,23 +161,16 @@ html {
   align-self: flex-start;
 }
 
-/* * Css pentru logo */
-.logo {
-  max-width: 100px;
-  height: auto;
-  display: block;
-}
-
 /* * CSS pentru cutia din stanga paginii cu linkuri catre social media */
 
 .social-icons-container {
   position: fixed;
-  z-index: 5;
   top: 50%;
   left: 0;
   width: 60px;
   transform: translateY(-50%);
   background-color: rgb(83, 45, 41);
+  z-index: 35;
 }
 
 .rounded-end {
@@ -141,7 +190,7 @@ html {
   font-size: 1.5rem;
 }
 .social-icons:hover {
-  background-color: rgba(61, 33, 30, 1);
+  background-color: rgb(103, 65, 61);
 }
 
 .social-icons:first-child {
@@ -150,4 +199,8 @@ html {
 
 .social-icons:last-child {
   border-radius: 0 0 8px 0;
+}
+
+.contact-info-icon {
+  color: rgb(83, 45, 41);
 }
